--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,4 +1,18 @@
 .footer {
   background-color: #232d3f;
   color: #fff;
+  border-top: 0.1px solid #005b41;
+  margin: 0;
+  padding: 0 50px;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+}
+
+.footer__text {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
 }
