--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -19,8 +19,38 @@
 .projects__item {
   background-color: #232d3f;
   color: #fff;
-  height: 300px;
-  width: 100%;
+  height: 100%;
+  width: 450px;
   list-style: none;
   border: 1px solid #000;
+  border-radius: 4px;
+}
+
+.projects__item-container {
+  margin: 10px;
+  height: 60px;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.projects__item-title {
+  margin: 0;
+  padding: 0;
+}
+
+.projects__item-logo {
+  margin: 0;
+  padding: 0;
+  height: 60px;
+  width: 80px;
+}
+
+.projects__image {
+  width: 450px;
+  height: 200px;
+  border-radius: 4px;
+  margin: 0;
+  padding: 0;
 }
