--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -8,7 +8,6 @@
 .projects__list {
   padding: 0;
   margin: 100px 0;
-  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,20 +15,23 @@
   /* flex-wrap: wrap; */
 }
 
+/* rename to projects__card-x */
 .projects__item {
+  margin: 0;
+  padding: 0;
   background-color: #232d3f;
   color: #fff;
-  height: 100%;
   width: 450px;
+  height: 295px;
   list-style: none;
-  border: 1px solid #000;
+  border: 1px solid #232d3f;
   border-radius: 4px;
 }
 
 .projects__item-container {
-  margin: 10px;
   height: 60px;
   padding: 0;
+  margin: 10px 14px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -49,8 +51,8 @@
 
 .projects__image {
   width: 450px;
-  height: 200px;
-  border-radius: 4px;
+  height: 215px;
+  border-radius: 0 0 4px 4px;
   margin: 0;
   padding: 0;
 }
