--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -28,6 +28,10 @@
   border-radius: 4px;
 }
 
+.projects__card:hover {
+  cursor: pointer;
+}
+
 .projects__card-container {
   height: 60px;
   padding: 0;
