--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,6 +5,26 @@
   font-family: Verdana;
 }
 
-html {
-  height: 100%;
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal__container {
+  padding: 28px 28px 36px;
+  background-color: #fff;
+  width: 496px;
+  max-height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  position: relative;
+  font-family: "Cabinet Grotesk Bold";
 }
