--- a/src/App/App.css
+++ b/src/App/App.css
@@ -24,7 +24,25 @@
   max-height: 100%;
   justify-content: center;
   align-items: center;
-  border-radius: 20px;
+  border-radius: 10px;
   position: relative;
   font-family: "Cabinet Grotesk Bold";
+}
+
+.modal__title {
+  font-size: 30px;
+  padding: 0;
+  margin: 0;
+}
+
+.modal__text {
+  text-align: left;
+  padding: 0;
+  margin: 0;
+}
+
+.modal__img {
+  width: 250px;
+  padding: 0;
+  margin: 0;
 }
