--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -5,37 +5,45 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: left;
 }
 
 .modal__container {
   padding: 28px 28px 36px;
-  background-color: #fff;
+  background-color: #232d3f;
   width: 496px;
   max-height: 100%;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 4px;
   position: relative;
-  font-family: "Cabinet Grotesk Bold";
+  font-family: Verdana;
 }
 
 .modal__title {
   font-size: 30px;
   margin: 0;
   padding: 0;
+  font-family: Verdana;
 }
 
 .modal__text {
-  text-align: left;
   padding: 0;
-  margin: 0;
+  margin: 25px 0;
+}
+
+.modal__text_bold {
+  font-weight: 900;
 }
 
 .modal__img {
-  width: 250px;
+  width: 100%;
   padding: 0;
   margin: 0;
+  cursor: pointer;
+  border-radius: 4px;
 }
