--- a/src/About/About.css
+++ b/src/About/About.css
@@ -15,6 +15,12 @@
   margin: 0;
 }
 
+.about__image {
+  height: 240px;
+  width: 180px;
+  border-radius: 4px;
+}
+
 .about__title {
   margin: 5px 0;
   padding: 0;
