--- a/src/About/About.css
+++ b/src/About/About.css
@@ -10,25 +10,31 @@
 .about__intro {
   margin: 20px 0 0;
   margin: 20px 100px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .about__intro-text {
   margin: 0;
 }
 
 .about__image {
-  height: 240px;
-  width: 180px;
+  height: 300px;
+  width: 225px;
   border-radius: 4px;
+  margin: 60px 0;
 }
 
 .about__title {
   margin: 5px 0;
   padding: 0;
+  font-size: 40px;
   color: #008170;
 }
 
 .about__text {
   margin: 20px 100px;
+  line-height: 30px;
 }
 
 .about__text-em {
